# ai-evaluation-practice

./: README.md  celery_app.py  day13_batch_process.py  day1_annotation_practice.md  day2_annotation_practice.xlsx  day8_record.md  main.py  pyproject.toml  tasks.py  week2_metrics.py
data/: data_day01_annotation.md  data_day02_annotation.md  day02_annotation.xlsx  day29_project_scope.md  day30_task_comparison.md  day31_samples.csv  day31_samples.jsonl  day31_sampling_notes.md  day32_labeling_examples.md  day32_labeling_guideline.md  day33_label_studio_export_notes.md  day33_label_studio_setup.md  day34_doccano_compare.md  day34_doccano_import_notes.md  day34_doccano_setup.md  day35_disagreement_taxonomy.md  day35_dual_annotation_input_schema.md
docs/: CLAUDE.md  day41_eval_ecosystem_map.md  day41_llm_judge_notes.md  day41_pairwise_judge_demo.md  day42_pipeline_overview.md  practice_plan.md  project_spec.md
outputs/: day33_label_studio_export.sample.json  day34_doccano_import_examples.jsonl  day37_bleu_analysis.md  day37_bleu_corpus_summary.csv  day37_bleu_scores.csv  day38_rouge_scores.csv  day39_meteor_scores.csv  day42_final_metrics.csv  day8_record.md  iter_022_v2.md
reports/: day02_annotation_analysis_report.xlsx  day2_annotation_practice_analysis_report.xlsx  day35_disagreement_analysis.csv  day35_disagreement_summary.md  day36_kappa_report.md  day38_rouge_analysis.md  day42_final_report.md  day42_metric_judge_matrix.md
scripts/: day10_metric_validation.py  day11_text_metrics.py  day12_metrics_report.py  day13_batch_process.py  day23_llm_judge_experiment.py  (+21 more)
(+117 files in other folders)
