[project]
name = "ai-evaluation-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "openpyxl>=3.1.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "openai>=1.40.0",
    "nltk>=3.9.4",
    "rouge-score>=0.1.2",
]
